@@ -69,7 +69,7 @@ static JSObject* constructImage(ExecState* exec, JSObject* constructor, const Ar
 ConstructType JSImageConstructor::getConstructData(ConstructData& constructData)
 {
     constructData.native.function = constructImage;
-    return ConstructTypeNative;
+    return ConstructTypeHost;
 }
 
 } // namespace WebCore
