@@ -99,7 +99,7 @@ ConstructType QtRuntimeObjectImp::getConstructData(ConstructData& constructData)
     case CallTypeNone:
         break;
     case CallTypeHost:
-        type = ConstructTypeNative;
+        type = ConstructTypeHost;
         break;
     case CallTypeJS:
         type = ConstructTypeJS;
